# raga

./: .gitignore  pyproject.toml
src/: main.py  tui.py  tui.tcss
src/agent_core/: agent.py  harness.py  session.py  streaming.py
src/client/: client.py  peekable_connection.py
src/gateway/: dispatcher.py  server.py
src/utils/: events.py
