[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raga"
version = "0.1.0"
description = "RAGA - Adaptive Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=8.2.7",
    "websockets>=16.0",
    "uvicorn>=0.49.0",
    "fastapi>=0.138.2",
    "openai>=2.44.0"
]

[project.scripts]
raga = "main:main"